# eagc-track1-world-model

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION_VERSION.txt  main.py  pyproject.toml  requirements-optional-sim.txt  requirements-report.txt  requirements.txt  sitecustomize.py  source_manifest.json
docker/: README_DOCKER.md  docker_run_examples.md
docs/: OFFICIAL_RUNTIME_ADAPTER.md  ai2thor_rendering_recovery.md  alfred_offline_adapter_report.md  demo_commands.md  habitat_env_spike_report.md  version_status_v0.15.3.md  version_status_v0.16.1.md  version_status_v0.16.2.md  version_status_v0.16.3.md  version_status_v0.16.4.md  version_status_v0.16.5.md  version_status_v0.16.6.md  version_status_v0.16.7.md  version_status_v0.16.md  version_status_v0.17.4.md  version_status_v0.17.md  virtualhome_windows_spike_report.md  vllm_virtualhome_gpu_budget.md
eagc_track1_mvp/: .gitignore  Dockerfile  README.md  config.yaml  main.py
reports/: report_metrics.json  technical_report.html  technical_report_build_status.json
scripts/: start_vllm_qwen36_vh_lite.ps1  stop_vllm_qwen36_vh_lite.ps1
submission_package/: README_submission.md  checklist.md  demo_commands.md  final_artifact_manifest.md  final_submission_checklist.md  open_source_statement.md  reproducibility_statement.md  system_limitations.md  technical_report.md  technical_report_draft.md
tests/: robustness_test_random_local_sim.py  smoke_test_all_mock_episodes.py  smoke_test_local_sim_episodes.py  smoke_test_track1_procedure.py  smoke_test_visual_sequence.py  test_audit_builder.py  test_harness.py  (+7 more)
(+246 files in other folders)
