[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagc-track1-world-model"
version = "0.17.6"
description = "EAGC Track 1 world-model agent"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "smoke_test_*.py"]
